@@ -3,8 +3,10 @@ tactile (4.2.0-0) unstable; urgency=low
   * Fixed minor spelling errors
   * Added sound effects to pixel coordinates quiz scene
   * Fixed particle spawn performance in the TouchAGrid scene
+  * Normalised scene transition times to give users enough
+    time to read instructions
 
- -- Team Kano <dev@kano.me>  Fri, 5 Oct 2018 11:36:37 +0100
+ -- Team Kano <dev@kano.me>  Mon, 8 Oct 2018 11:36:37 +0100
 
 tactile (4.1.0-0) unstable; urgency=low
 
